chore: clean up config

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,30 +51,20 @@ package_dir =
 where = src
 
 [options.extras_require]
-all =
-    check-manifest>=0.42
-    pandas
-    pytest>=6
-    pytest-benchmark
-    tabulate
-dev =
-    check-manifest>=0.42
-    pandas
-    pytest>=6
-    pytest-benchmark
-    tabulate
 test =
     pandas
     pytest>=6
     pytest-benchmark
     pytest-cov
     tabulate
+dev =
+    check-manifest>=0.42
+    %(test)s
+all =
+    $(dev)s
 
 [options.package_data]
 * = *.csv, *.fwf, *.mcd, *.py.typed
-
-[bdist_wheel]
-universal = 1
 
 [tool:pytest]
 testpaths =
