--- a/setup.cfg
+++ b/setup.cfg
@@ -60,7 +60,7 @@ dev =
     check-manifest>=0.42
     %(test)s
 all =
-    $(dev)s
+    %(dev)s
 
 [options.package_data]
 * = *.csv, *.fwf, *.mcd, *.py.typed
