WIP: try using extra markers

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,12 @@ packages = find:
 install_requires =
     attrs>=19.2
     hepunits>=2.0.0
+    check-manifest;extra in "dev all"
     importlib-resources>=2.0;python_version<"3.9"
+    pytest>=6;extra in "test dev all"
+    pytest-benchmark;extra in "test dev all"
+    pytest-cov;extra in "test dev all"
+    tabulate;extra in "test dev all"
     typing-extensions;python_version<"3.8"
 python_requires = >=3.6
 include_package_data = True
@@ -50,21 +55,15 @@ package_dir =
 where = src
 
 [options.extras_require]
+all =
+    pandas
+dev =
+    pandas
 test =
     pandas
-    pytest>=6
-    pytest-benchmark
-    pytest-cov
-    tabulate
-dev =
-    check-manifest>=0.42
-    %(test)s
-all =
-    %(dev)s
 
 [options.package_data]
 * = *.csv, *.fwf, *.mcd, *.py.typed
-
 
 [flake8]
 max-complexity = 24
