--- a/setup.cfg
+++ b/setup.cfg
@@ -39,12 +39,12 @@ packages = find:
 install_requires =
     attrs>=19.2
     hepunits>=2.0.0
-    check-manifest;extra in "dev all"
+    check-manifest;extra and extra in "dev all"
     importlib-resources>=2.0;python_version<"3.9"
-    pytest>=6;extra in "test dev all"
-    pytest-benchmark;extra in "test dev all"
-    pytest-cov;extra in "test dev all"
-    tabulate;extra in "test dev all"
+    pytest>=6;extra and extra in "test dev all"
+    pytest-benchmark;extra and extra in "test dev all"
+    pytest-cov;extra and extra in "test dev all"
+    tabulate;extra and extra in "test dev all"
     typing-extensions;python_version<"3.8"
 python_requires = >=3.6
 include_package_data = True
